# SonosSoundHub

./: ...sln  .gitignore  README.md  SETUP.md  index.html  staticwebapp.config.json  swa-cli.config.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: azure-frontend-byo.yml.disabled  azure-function-byo.yml.disabled  azure-static-web-apps.yml  deb.yml  release-tarballs.yml  release.yml
api/: Program.cs  SampleBackendFunction.cs  api.csproj  appsettings.json
api-python/: README.md  pyproject.toml
api-python/src/sndctl/: config.py
api-python/src/sndctl/routers/: sonos.py
api-python/src/sndctl/services/: soco_service.py
api/Controllers/: MacroController.cs  SonosController.cs  VoiceController.cs
api/Models/: SonosModels.cs
api/Properties/: launchSettings.json
api/Services/: MacroService.cs  SocoCliService.cs  SonosCommandService.cs
api/wwwroot/: app.html  index.html
api/wwwroot/css/: app.css  components.css  sonos-theme.css
api/wwwroot/js/: api.js  app-mobile.js  app.js  macros.js  speakers.js  ui-components.js  voice.js
app/: app.js  index.html
packaging/: nfpm.yaml  sonos-sound-hub.service
sonos-mcp-server/: README.md  pyproject.toml
sonos-mcp-server/src/sonos_mcp_server/: __init__.py  api_client.py  server.py  tools.py
tools/: init-local-settings.sh  setup-azure-resources.sh  switch-to-byo-functions.sh
wwwroot/: app.html  index.html
wwwroot/css/: sonos-theme.css
wwwroot/js/: app-mobile.js  speakers.js  voice.js
